--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ defaults:
     values:
       is_post: true
       layout: post
-      permalink: /blog/:categories/:title/
+      permalink: /categories/:title/
   - 
   scope:
       type: pages
