change header links, fix post default

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ plugins:
 
 defaults:
   - scope:
-      path: "_post"
+      path: "_posts"
     values:
       is_post: true
       layout: "post"
