comment out permalink in post defaults

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ defaults:
     values:
       is_post: true
       layout: "post"
-      permalink: /blog/:categories/:title/
+      # permalink: /blog/:categories/:title/
   - scope:
       path: "_pages"
     values:
