change default for posts

--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,11 @@ defaults:
   - scope:
       path: "_posts"
     values:
-      # is_post: true
-      layout: "post"
+      layout: "default"
       permalink: /blog/:categories/:title/
   - scope:
       path: "_pages"
     values:
-      # is_post: false
       layout: "default"
 
 include: [_pages]
