get rid of 404 error in blog

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ defaults:
       path: "_posts"
     values:
       layout: "post"
-      permalink: /blog/:categories/:title/
+      permalink: /:title
   - scope:
       path: "_pages"
     values:
