make prints random

--- a/_data/prints.yml
+++ b/_data/prints.yml
@@ -166,7 +166,7 @@ cutw:
       path: /assets/images/prints/maggie-umber-cutw-chrysanthemum-finale.jpg
       alt: a woman stands in a doorway, with an intense emotion on her face
     button_id: PCYWTYWFWJRSQ
-  - title: Chrysanthemum Under the Waves Print
+  - title: CUTW Print
     cover:
       path: /assets/images/prints/maggie-umber-cutw-chrysanthemum-under-the-waves-print.jpg
       alt: face in profile, with her hair floating above her head
