change books to graphic novels in the listings

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -43,7 +43,7 @@ zines:
     price: $10
     button_id: 423SNC57JXKAA
 
-books:
+graphicnovels:
   - title: Chrysanthemum <br />Under the Waves
     link: /chrysanthemum-under-the-waves
     cover:
