fix link on index, add RBRvol6 to books, match books toys and prints to each other

--- a/_data/anthologies.yml
+++ b/_data/anthologies.yml
@@ -1,3 +1,9 @@
+- title: Rust Belt Review Vol 6
+  link: https://www.seanknickerbocker.com/store/rust-belt-review-volume-five-e25yy
+  cover:
+    path: /assets/images/books/anthologies/maggie-umber-rust-belt-review-volume-six.jpg
+    alt: "city street sunset with buildings with broken windows, text reads: Rust Belt Review A Comics Anthology Volume Six"
+  info: Available from <br /> ed. Sean Knickerbocker
 - title: "NOW #8"
   link: https://www.fantagraphics.com/products/now-8-the-new-comics-anthology
   cover:
