--- a/_data/books.yml
+++ b/_data/books.yml
@@ -49,7 +49,7 @@ graphicnovels:
     cover:
       path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
       alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-    price: "* PREORDER * <br />$35"
+    price: "$35 <br /> On sale date: <br />Oct 22, 2024"
     button_id: SB5W5DNEJC7LS
   - title: "270°"
     link: /270
