--- a/_data/books.yml
+++ b/_data/books.yml
@@ -4,7 +4,7 @@ graphicnovels:
     cover:
       path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
       alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-    price: "$35 PREORDER <br /> On sale date: <br />Oct 22, 2024"
+    price: "$35 PREORDER <br /> On sale: 10/22/24"
     button_id: SB5W5DNEJC7LS
   - title: "270°"
     link: /270
@@ -73,63 +73,63 @@ zines:
     button_id: 423SNC57JXKAA
 
 wholesale:
-  - title: Wholesale <br />Chrysanthemum Under the Waves
+  - title: Chrysanthemum Under the Waves
     link: /wholesale-chrysanthemum-under-the-waves
     cover:
       path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
       alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-    price: "<s>Retail $35</s> <br />Wholesale $17.50 PREORDER<br />On sale date: <br />Oct 22, 2024"
+    price: "<s>Retail $35</s> <br />Wholesale $17.50 PREORDER<br />On sale: 10/22/24"
     button_id: 5LFEPSPQT2VSJ
-  - title: Wholesale <br />Sound of Snow Falling
+  - title: Sound of Snow Falling
     link: /wholesale-sound-of-snow-falling
     cover:
       path: /assets/images/books/maggie-umber-sound-of-snow-falling-cover.jpg
       alt: "a great horned owl in a tree hooting on the cover, text reads: Maggie Umber Sound of Snow Falling"
     price: <s>Retail $23</s> <br /> Wholesale $11.50
     button_id: B4BG3UL7DAWT2
-  - title: Wholesale <br />270°
+  - title: 270°
     link: /wholesale-270
     cover:
       path: "/assets/images/books/maggie-umber-270-cover.jpg"
       alt: "a northern saw-whet owl in a pine tree on the cover, with text that reads: maggie umber 270°"
     price: <s>Retail $15</s> <br /> Wholesale $7.50
     button_id: X4QLZHSEEMFEQ
-  - title: Wholesale <br />Time Capsule
+  - title: Time Capsule
     link: /wholesale-time-capsule
     cover:
       path: /assets/images/books/maggie-umber-time-capsule-cover.jpg"
       alt: "a tortoise in a display case on the cover, text reads: Time Capsule Maggie Umber"
     price: <s>Retail $12</s> <br /> Wholesale $6
     button_id: 3QFF49T6Z3D6A
-  - title: Wholesale <br />Startled Maggie 1
+  - title: Startled Maggie 1
     link: /wholesale-startled-maggie-1
     cover:
       path: /assets/images/books/maggie-umber-startled-maggie-issue-one-cover.jpg
       alt: "mom, dad, baby, text reads: Startled Maggie issue one by meghan hogan"
     price: <s>Retail $6</s> <br />Wholesale $3.60
     button_id: TWASXWM5JUUB6
-  - title: Wholesale <br />Bunworld 1
+  - title: Bunworld 1
     link: /wholesale-bunworld-1
     cover:
       path: /assets/images/books/maggie-umber-bunworld-1-cover.jpg
       alt: "a little baker and a bunny read a book in front of huge ice cream, text reads: Maggie Umber, Bunworld"
     price: <s>Retail $14</s> <br />Wholesale $8.40
     button_id: 5Z8JCWWVMLB5C
-  - title: Wholesale <br />Jonesy
+  - title: Jonesy
     link: /wholesale-jonesy
     cover:
       path: /assets/images/books/maggie-umber-jonesy-cover.jpg
       alt: "a red figure smiling on a book cover, text reads: Jonesy, Maggie Umber"
     price: <s>Retail $8</s> <br />Wholesale $4.80
     button_id: 64X4NCQLTYNC6
-  - title: Wholesale <br />PRETZEL
+  - title: PRETZEL
     link: /wholesale-pretzel
     cover:
       path: /assets/images/books/maggie-umber-pretzel-cover.jpg
       alt: "a white pretzel on a black zine cover, text reads: PRETZEL, Maggie Umber"
     price: <s>Retail $5</s> <br />Wholesale $3.00
     button_id: FWZVGTKY2MFS8
-  - title: Wholesale <br />WE ARE HUNGRY
+  - title: WE ARE HUNGRY
     link: /wholesale-we-are-hungry
     cover:
       path: /assets/images/books/maggie-umber-we-are-hungry-cover.jpg
