add death spark 2 and post about it

--- a/_data/anthologies.yml
+++ b/_data/anthologies.yml
@@ -4,6 +4,12 @@
     path: /assets/images/books/anthologies/maggie-umber-rust-belt-review-volume-6.jpg
     alt: "city street sunset with buildings with broken windows, text reads: Rust Belt Review A Comics Anthology Volume Six"
   info: Available from <br /> ed. Sean Knickerbocker
+- title: Death Spark 2
+  link: https://www.comicsblogger.net/
+  cover:
+    path: /assets/images/books/anthologies/maggie-umber-death-spark-2.jpg
+    alt: "book cover, text reads: Death Spark 2"
+  info: Available from <br /> Comics Blogger at SPX
 - title: "NOW #8"
   link: https://www.fantagraphics.com/products/now-8-the-new-comics-anthology
   cover:
