--- a/_data/anthologies.yml
+++ b/_data/anthologies.yml
@@ -5,11 +5,11 @@
     alt: "city street sunset with buildings with broken windows, text reads: Rust Belt Review A Comics Anthology Volume Six"
   info: Available from <br /> ed. Sean Knickerbocker
 - title: Death Spark 2
-  link: https://www.comicsblogger.net/
+  link: https://www.comicsblogger.net/product/death-spark-2
   cover:
     path: /assets/images/books/anthologies/maggie-umber-death-spark-2.jpg
     alt: "book cover, text reads: Death Spark 2"
-  info: Available from <br /> Comics Blogger at SPX
+  info: Available from <br /> Comics Blogger
 - title: "NOW #8"
   link: https://www.fantagraphics.com/products/now-8-the-new-comics-anthology
   cover:
